// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-60b8rq-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-7ysx2o-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-r64h58-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-xvk2i-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1s5aiix-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-d71foe-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-7ysx2o-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-r64h58-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-xvk2i-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1s5aiix-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ENCOURA theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-12rz9cs-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-1y20bxg-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-r64h58-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-xvk2i-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-105dfkf-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1iw3t7y-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1y09qg2-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-fuh4dx-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-r64h58-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-xvk2i-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-x3s2to-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-1hs4u7e-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1mrpxuv-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-merp2l-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-r64h58-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-xvk2i-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-1bj9lxw-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`Slider ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiFormControl-root css-41n6jb-MuiFormControl-root"
  >
    <label
      class="MuiFormLabel-root MuiFormLabel-colorPrimary css-1h0s69m-MuiFormLabel-root"
      id="slider-label"
    >
      Slider Label
    </label>
    <span
      class="MuiSlider-root MuiSlider-colorPrimary MuiSlider-sizeMedium css-13vpke-MuiSlider-root"
    >
      <span
        class="MuiSlider-rail css-r64h58-MuiSlider-rail"
      />
      <span
        class="MuiSlider-track css-xvk2i-MuiSlider-track"
        style="left: 0%; width: 0%;"
      />
      <span
        class="MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary MuiSlider-thumb MuiSlider-thumbSizeMedium MuiSlider-thumbColorPrimary css-17fzpfi-MuiSlider-thumb"
        data-index="0"
        style="left: 0%;"
      >
        <input
          aria-labelledby="slider-label"
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          data-index="0"
          max="100"
          min="0"
          step="1"
          style="border: 0px; height: 100%; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 100%; direction: ltr;"
          type="range"
          value="0"
        />
      </span>
    </span>
  </div>
</div>
`;
